--- a/frontend/src/locales/ko/translation.json
+++ b/frontend/src/locales/ko/translation.json
@@ -23,7 +23,24 @@
     },
 
     "error": {
+      "server":{
+        "generic":"서버 오류가 발생했습니다. 잠시 후 다시 시도해주세요."
+      },
+      "method":{
+        "generic":"요청 방법이 올바르지 않습니다.",
+        "get": "GET 메서드는 지원하지 않습니다.",
+        "post": "POST 메서드는 지원하지 않습니다.",
+        "put": "PUT 메서드는 지원하지 않습니다.",
+        "delete": "DELETE 메서드는 지원하지 않습니다."
+      },
       "required": {
+        "credentials":{
+          "both": "아이디와 비밀번호를 모두 입력해주세요.",
+          "no_such_user": "존재하지 않는 사용자입니다.",
+          "bad_password": "비밀번호가 올바르지 않습니다.",
+          "inactive":"승인되지 않은 계정입니다. 관리자에게 문의하세요."
+        },
+        "deleted_user":"탈퇴한 유저입니다.",
         "username": "이름을 입력해주세요.",
         "password": "비밀번호를 입력해주세요.",
         "email": "이메일을 입력해주세요."
@@ -32,6 +49,9 @@
         "email": "유효한 이메일 주소를 입력해주세요.",
         "password": {
           "length": "비밀번호는 최소 8자 이상이어야 합니다."
+        },
+        "request":{
+          "generic":"로그인 요청을 처리할 수 없습니다. 입력 형식을 확인해 주세요."
         }
       },
       "duplicate": {
