feat: 로그인 백그라운드 애니메이션 적용 및 tooltip, button 등 수정

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -22,6 +22,10 @@
         "user": "User Page"
     },
 
+    "tooltip":{
+      "languageSetting": "Language Settings"
+    },
+
     "error": {
         "server":{
           "generic":"A server error occurred. Please try again later."
