--- a/frontend/src/locales/zh/translation.json
+++ b/frontend/src/locales/zh/translation.json
@@ -20,6 +20,10 @@
         "user": "用户页面"
     },
 
+    "tooltip":{
+      "languageSetting": "语言设置"
+    },
+
     "error": {
         "server":{
           "generic":"服务器发生错误，请稍后重试。"
