feat: login page 정리 및 언어설정 리팩토링

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -23,9 +23,14 @@
     },
 
     "tooltip":{
-      "languageSetting": "Language Settings"
+      "languageSetting": "Language Settings",
+      "passwordToggle": {
+        "show": "Show password",
+        "hide": "Hide password"
+      }
     },
 
+    
     "error": {
         "server":{
           "generic":"A server error occurred. Please try again later."
