--- a/frontend/src/locales/ko/translation.json
+++ b/frontend/src/locales/ko/translation.json
@@ -26,9 +26,14 @@
     },
     
     "tooltip":{
-      "languageSetting": "언어설정"
+      "languageSetting": "언어설정",
+      "passwordToggle": {
+        "show": "비밀번호 보기",
+        "hide": "비밀번호 숨기기"
+      }
     },
 
+    
     "error": {
       "server":{
         "generic":"서버 오류가 발생했습니다. 잠시 후 다시 시도해주세요."
