feat: 로그아웃 기능 추가 및 그룹 셀렉트 진행_

--- a/frontend/src/locales/zh/translation.json
+++ b/frontend/src/locales/zh/translation.json
@@ -9,6 +9,10 @@
         "title": "找回密码"
       }
     },
+    "logout":{
+      "confirm": "您要退出登录吗？"
+    },
+
     "signup": {
       "title": "注册"
     },
