--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -8,6 +8,9 @@
         "title": "Forgot Password"
       }
     },
+    "logout":{
+      "confirm": "Would you like to log out?"
+    },
 
     "signup": {
       "title": "Sign Up"
