--- a/frontend/src/locales/ko/translation.json
+++ b/frontend/src/locales/ko/translation.json
@@ -9,6 +9,10 @@
         "title": "비밀번호 찾기"
       }
     },
+    "logout":{
+      "confirm": "로그아웃 하시겠습니까?"
+    },
+    
     "signup": {
       "title": "회원가입"
     },
