feat: 유저 회사별 페이지 이동 select 컴포넌트 완성 및 이벤트 완성, 툴팁 적용 완료

--- a/frontend/src/locales/ko/translation.json
+++ b/frontend/src/locales/ko/translation.json
@@ -35,6 +35,10 @@
       "owner": "담당자"
     },
 
+    "group":{
+      "company":"회사"
+    },
+
     "common": {
       "loading": "로딩중..."
     },
@@ -62,6 +66,7 @@
         "show": "비밀번호 보기",
         "hide": "비밀번호 숨기기"
       },
+      "changeCompany": "회사 변경",
       "sideMenu": {
         "menu": "메뉴",
         "notifications": "알림",
