--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -34,6 +34,10 @@
       "owner": "Owner"
     },
 
+    "group":{
+      "company":"company"
+    },
+
     "auth": {
       "social": {
         "title": "Social login",
@@ -57,6 +61,7 @@
         "show": "Show password",
         "hide": "Hide password"
       },
+      "changeCompany": "Change Company",
       "sideMenu": {
         "menu": "Menu",
         "notifications": "Notifications",
