--- a/frontend/src/locales/zh/translation.json
+++ b/frontend/src/locales/zh/translation.json
@@ -38,6 +38,15 @@
       "company":"公司"
     },
 
+      "common": {
+      "loading": "加载中...",
+      "seeMore":"查看更多"
+    },
+
+    "unit":{
+      "count": "个"
+    },
+
     "auth": {
       "social": {
           "title": "社交登录",
@@ -47,6 +56,7 @@
           "otherMethods": "其他方式"
         }
     },
+
     "social": {
       "google": "Google",
       "apple": "Apple",
@@ -55,12 +65,32 @@
       "facebook": "Facebook"
     },
 
+    "filterTags":{
+      "all":"全部",
+      "unconfirmed":"未确认",
+      "confirmed":"已确认"
+    },
+    
+    "sortOptions": {
+      "latest": "最新",
+      "oldest": "最旧",
+      "status": "状态"
+    },
+
+    "categories":{
+      "announcement": "公告",
+      "approvalRequest": "审批请求",
+      "system": "系统",
+      "update": "更新"
+    },
+
     "tooltip":{
       "languageSetting": "语言设置",
       "passwordToggle": {
         "show": "显示密码",
         "hide": "隐藏密码"
       },
+
       "changeCompany": "更改公司",
       "sideMenu": {
         "menu": "菜单",
@@ -110,9 +140,5 @@
           "username": "该用户名已被使用。",
           "email": "该电子邮件已注册。"
         }
-      },
-
-    "common": {
-      "loading": "加载中..."
-    }
+      }
 }
