feat: Notification item 미세조정 및 Modals components 만들기

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -41,7 +41,8 @@
     
     "common": {
       "loading": "Loading...",
-      "seeMore":"seeMore"
+      "seeMore":"seeMore",
+      "delete":"Delete"
     },
 
     "unit":{
