--- a/frontend/src/locales/zh/translation.json
+++ b/frontend/src/locales/zh/translation.json
@@ -40,7 +40,8 @@
 
       "common": {
       "loading": "加载中...",
-      "seeMore":"查看更多"
+      "seeMore":"查看更多",
+      "delete":"删除"
     },
 
     "unit":{
