--- a/frontend/src/locales/ko/translation.json
+++ b/frontend/src/locales/ko/translation.json
@@ -10,7 +10,9 @@
       }
     },
     "logout":{
-      "confirm": "로그아웃 하시겠습니까?"
+      "title": "로그아웃",
+      "confirm": "로그아웃 하시겠습니까?",
+      "warning": "현재 작업 중인 내용이 저장되지 않을 수 있습니다.\n 로그아웃 하시겠습니까?"
     },
     
     "signup": {
@@ -42,7 +44,9 @@
     "common": {
       "loading": "로딩중...",
       "seeMore":"더보기",
-      "delete":"삭제"
+      "delete":"삭제",
+      "cancel": "취소",
+      "cancelAction": "취소하기"
     },
 
     "unit":{
